oubli d'une ligne meta essentielle pour la responsivité. Retouche du index.html et css suite à l'ajout de cette balise meta.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
   <head>
     <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>OhMyFood</title>
 
     <!-- CSS -->
@@ -21,105 +22,95 @@
 
   <body>
     <header class="logo-ohmyfood-section">
-      <img src="images/ohmyfood.png" class="logo-ohmyfood" alt="logo ohmyfood">
+      <img src="images\ohmyfood.png" class="logo-ohmyfood" alt="logo ohmyfood">
     </header>
 
-    <main>
-      <section class="user-location">
-        <p class="paragraph"><i class="fa-solid fa-location-dot map-logo"></i>Paris, Belleville</p>
-      </section>
+    <div class="user-location">
+      <p class="paragraph"><i class="fa-solid fa-location-dot map-logo"></i>Paris, Belleville</p>
+    </div>
 
-      <section class="reservation-menu">
-        <h1>Réservez le menu qui vous convient</h1>
-        <p class="site-presentation">Découvrez des restaurants d'exception, séléctionées par nos soins.</p>
-        <a href="#" class="restaurant-list-button">Explorer nos restaurants</a>
-      </section>
+    <div class="reservation-menu">
+      <h1 class="h1-welcome-page">Réservez le menu qui vous convient</h1>
+      <p class="site-presentation">Découvrez des restaurants d'exception, séléctionées par nos soins.</p>
+      <a href="#" class="restaurant-list-button">Explorer nos restaurants</a>
+    </div>
 
-      <section class="fonctionnement">
-        <h2>Fonctionnement</h2>
-        <div class="step">
-          <div class="paragraph-fonct"><i class="fa-solid fa-1 fa-fw step-number"></i><i class="fa-solid fa-mobile-screen-button fa-fw step-logo"></i><p>Choisissez un restaurant</p></div>
-        </div>
-        <div class="step">
-          <div class="paragraph-fonct"><i class="fa-solid fa-2 fa-fw step-number"></i><i class="fa-solid fa-list fa-fw step-logo"></i><p>Composez votre menu</p></div>
-        </div>
-        <div class="step">
-          <div class="paragraph-fonct"><i class="fa-solid fa-3 fa-fw step-number"></i><i class="fa-solid fa-store fa-fw step-logo"></i><p>Dégustez au restaurant</p></div>
-        </div>
+    <div class="fonctionnement">
+      <h2 class="h2-welcome-page">Fonctionnement</h2>
+      <div class="step">
+        <div class="paragraph-fonct"><i class="fa-solid fa-1 fa-fw step-number"></i><i class="fa-solid fa-mobile-screen-button fa-fw step-logo"></i><p class="step-text">Choisissez un restaurant</p></div>
+      </div>
+      <div class="step">
+        <div class="paragraph-fonct"><i class="fa-solid fa-2 fa-fw step-number"></i><i class="fa-solid fa-list fa-fw step-logo"></i><p class="step-text">Composez votre menu</p></div>
+      </div>
+      <div class="step">
+        <div class="paragraph-fonct"><i class="fa-solid fa-3 fa-fw step-number"></i><i class="fa-solid fa-store fa-fw step-logo"></i><p class="step-text">Dégustez au restaurant</p></div>
+      </div>
 
-      </section>
+    </div>
 
-      <section class="restaurant-list">
-        <h2>Restaurants</h2>
+    <div class="restaurant-list">
+      <h2 class="h2-welcome-page">Restaurants</h2>
 
-        <a href="la-palette-du-gout-menu.html">
-        <div class="restaurant">
-          <p class="new">Nouveau</p>
-          <img src="images/restaurants/la-palette-du-gout.jpg" alt="restaurant la palette du goût">
-          <div class="restaurant-details-flexbox">
-            <div class="restaurant-descr">
-              <h3>La palette du goût</h3>
-              <p>Ménilmontant</p>
-            </div>
-            <div class="div-heart-logo">
-              <i class="fa-regular fa-heart fa-4x heart-logo"></i>
-              <i class="fa-solid fa-heart fa-4x heart-logo-colored"></i>
-            </div>
+      <div class="restaurant">
+        <p class="new">Nouveau</p>
+        <img src="images/restaurants/la-palette-du-gout.jpg" alt="restaurant la palette du goût">
+        <div class="restaurant-details-flexbox">
+          <div class="restaurant-descr">
+            <h3 class="restaurant-name-welcome-page">La palette du goût</h3>
+            <p>Ménilmontant</p>
+          </div>
+          <div class="div-heart-logo">
+            <a href="#"><i class="fa-regular fa-heart fa-2x heart-logo"></i></a>
+            <a href="#"><i class="fa-solid fa-heart fa-2x heart-logo-colored"></i></a>
           </div>
         </div>
-        </a>
+      </div>
 
-        <a href="la-note-echantee-menu.html">
-        <div class="restaurant">
-          <p class="new">Nouveau</p>
-          <img src="images/restaurants/la-note-enchantee.jpg" alt="restaurant La note enchantée">
-          <div class="restaurant-details-flexbox">
-            <div class="restaurant-descr">
-              <h3>La note enchantée</h3>
-              <p>Charonne</p>
-            </div>
-            <div class="div-heart-logo">
-              <i class="fa-regular fa-heart fa-4x heart-logo"></i>
-              <i class="fa-solid fa-heart fa-4x heart-logo-colored"></i>
-            </div>
+      <div class="restaurant">
+        <p class="new">Nouveau</p>
+        <img src="images\restaurants\la-note-enchantee.jpg" alt="restaurant La note enchantée">
+        <div class="restaurant-details-flexbox">
+          <div class="restaurant-descr">
+            <h3 class="restaurant-name-welcome-page">La note enchantée</h3>
+            <p>Charonne</p>
+          </div>
+          <div class="div-heart-logo">
+            <a href="#"><i class="fa-regular fa-heart fa-2x heart-logo"></i></a>
+            <a href="#"><i class="fa-solid fa-heart fa-2x heart-logo-colored"></i></a>
           </div>
         </div>
-        </a>
+      </div>
 
-        <a href="a-la-francaise-menu.html">
-        <div class="restaurant">
-          <img src="images/restaurants/a-la-francaise.jpg" alt="restaurant A la française">
-          <div class="restaurant-details-flexbox">
-            <div class="restaurant-descr">
-              <h3>A la française</h3>
-              <p>Cité Rouge</p>
-            </div>
-            <div class="div-heart-logo">
-              <i class="fa-regular fa-heart fa-4x heart-logo"></i>
-              <i class="fa-solid fa-heart fa-4x heart-logo-colored"></i>
-            </div>
+      <div class="restaurant">
+        <img src="images\restaurants\a-la-francaise.jpg" alt="restaurant A la française">
+        <div class="restaurant-details-flexbox">
+          <div class="restaurant-descr">
+            <h3 class="restaurant-name-welcome-page">A la française</h3>
+            <p>Cité Rouge</p>
+          </div>
+          <div class="div-heart-logo">
+            <a href="#"><i class="fa-regular fa-heart fa-2x heart-logo"></i></a>
+            <a href="#"><i class="fa-solid fa-heart fa-2x heart-logo-colored"></i></a>
           </div>
         </div>
-        </a>
+      </div>
 
-        <a href="le-delice-des-sens-menu.html">
-        <div class="restaurant">
-          <img src="images/restaurants/le-delice-des-sens.jpg" alt="restaurant Le délice des sens">
-          <div class="restaurant-details-flexbox">
-            <div class="restaurant-descr">
-            <h3>Le délice des sens</h3>
-            <p>Folie-Méricourt</p>
-            </div>
-            <div class="div-heart-logo">
-              <i class="fa-regular fa-heart fa-4x heart-logo"></i>
-              <i class="fa-solid fa-heart fa-4x heart-logo-colored"></i>
-            </div>
+      <div class="restaurant">
+        <img src="images\restaurants\le-delice-des-sens.jpg" alt="restaurant Le délice des sens">
+        <div class="restaurant-details-flexbox">
+          <div class="restaurant-descr">
+          <h3 class="restaurant-name-welcome-page">Le délice des sens</h3>
+          <p>Folie-Méricourt</p>
+          </div>
+          <div class="div-heart-logo">
+            <a href="#"><i class="fa-regular fa-heart fa-2x heart-logo"></i></a>
+            <a href="#"><i class="fa-solid fa-heart fa-2x heart-logo-colored"></i></a>
           </div>
         </div>
-        </a>
+      </div>
 
-      </section>
-    </main>
+    </div>
 
     <footer class="footer-main-page">
       <p>ohmyfood</p>
