Ajout du boutton "précédent" dans les pages menus et modifications visuelles apportées pour la responsivité

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="reservation-menu">
       <h1 class="h1-welcome-page">Réservez le menu qui vous convient</h1>
-      <p class="site-presentation">Découvrez des restaurants d'exception, séléctionées par nos soins.</p>
+      <p class="site-presentation">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
       <a href="#" class="restaurant-list-button">Explorer nos restaurants</a>
     </div>
 
@@ -54,7 +54,7 @@
 
       <div class="restaurant">
         <p class="new">Nouveau</p>
-        <img src="images/restaurants/la-palette-du-gout.jpg" alt="restaurant la palette du goût">
+        <a href="la-palette-du-gout-menu.html"><img src="images/restaurants/la-palette-du-gout.jpg" alt="restaurant la palette du goût"></a>
         <div class="restaurant-details-flexbox">
           <div class="restaurant-descr">
             <h3 class="restaurant-name-welcome-page">La palette du goût</h3>
@@ -69,7 +69,7 @@
 
       <div class="restaurant">
         <p class="new">Nouveau</p>
-        <img src="images\restaurants\la-note-enchantee.jpg" alt="restaurant La note enchantée">
+        <a href="la-note-echantee-menu.html"><img src="images\restaurants\la-note-enchantee.jpg" alt="restaurant La note enchantée"></a>
         <div class="restaurant-details-flexbox">
           <div class="restaurant-descr">
             <h3 class="restaurant-name-welcome-page">La note enchantée</h3>
@@ -83,7 +83,7 @@
       </div>
 
       <div class="restaurant">
-        <img src="images\restaurants\a-la-francaise.jpg" alt="restaurant A la française">
+        <a href="a-la-francaise-menu.html"><img src="images\restaurants\a-la-francaise.jpg" alt="restaurant A la française"></a>
         <div class="restaurant-details-flexbox">
           <div class="restaurant-descr">
             <h3 class="restaurant-name-welcome-page">A la française</h3>
@@ -97,7 +97,7 @@
       </div>
 
       <div class="restaurant">
-        <img src="images\restaurants\le-delice-des-sens.jpg" alt="restaurant Le délice des sens">
+        <a href="le-delice-des-sens-menu.html"><img src="images\restaurants\le-delice-des-sens.jpg" alt="restaurant Le délice des sens"></a>
         <div class="restaurant-details-flexbox">
           <div class="restaurant-descr">
           <h3 class="restaurant-name-welcome-page">Le délice des sens</h3>
@@ -117,7 +117,7 @@
       <p><i class="fa-solid fa-utensils fa-fw footer-logo fork"></i>Proposer un restaurant</p>
       <p><i class="fa-solid fa-handshake-angle fa-fw footer-logo"></i>Devenir partenaire</p>
       <p>Mentions légales</p>
-      <p>Contact</p>
+      <a href="mailto:someone@yoursite.com"><p>Contact</p></a>
     </footer>
 
   </body>
