--- a/la-note-echantee-menu.html
+++ b/la-note-echantee-menu.html
@@ -22,7 +22,8 @@
   <body>
 
     <!-- logo en tête de page -->
-    <header class="logo-ohmyfood-section">
+    <header class="logo-ohmyfood-section logo-ohmyfood-section-menu-page">
+      <a class="arrow-margin" href="index.html"><i class="fa-solid fa-arrow-left fa-3x"></i></a>
       <img src="images/ohmyfood.png" class="logo-ohmyfood" alt="logo ohmyfood">
     </header>
 
@@ -213,7 +214,7 @@
 
         <!-- Bouton "commander" -->
         <div class="order-button">
-          <a href="#" class="restaurant-list-button">Commander</a>
+          <a href="#" class="restaurant-list-button order-button-design">Commander</a>
         </div>
       </section>
     </main>
