ajout responsivité catégorie "restaurant"

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/desktop.css">
+    <link rel="stylesheet" href="css/tablet.css">
 
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -52,60 +53,62 @@
     <div class="restaurant-list">
       <h2 class="h2-welcome-page">Restaurants</h2>
 
-      <div class="restaurant">
-        <p class="new">Nouveau</p>
-        <a href="la-palette-du-gout-menu.html"><img src="images/restaurants/la-palette-du-gout.jpg" alt="restaurant la palette du goût"></a>
-        <div class="restaurant-details-flexbox">
-          <div class="restaurant-descr">
-            <h3 class="restaurant-name-welcome-page">La palette du goût</h3>
-            <p>Ménilmontant</p>
-          </div>
-          <div class="div-heart-logo">
-            <a href="#"><i class="fa-regular fa-heart fa-2x heart-logo"></i></a>
-            <a href="#"><i class="fa-solid fa-heart fa-2x heart-logo-colored"></i></a>
-          </div>
-        </div>
-      </div>
-
-      <div class="restaurant">
-        <p class="new">Nouveau</p>
-        <a href="la-note-echantee-menu.html"><img src="images\restaurants\la-note-enchantee.jpg" alt="restaurant La note enchantée"></a>
-        <div class="restaurant-details-flexbox">
-          <div class="restaurant-descr">
-            <h3 class="restaurant-name-welcome-page">La note enchantée</h3>
-            <p>Charonne</p>
-          </div>
-          <div class="div-heart-logo">
-            <a href="#"><i class="fa-regular fa-heart fa-2x heart-logo"></i></a>
-            <a href="#"><i class="fa-solid fa-heart fa-2x heart-logo-colored"></i></a>
+      <div class="flexbox-container">
+        <div class="restaurant">
+          <p class="new">Nouveau</p>
+          <a href="la-palette-du-gout-menu.html"><img src="images/restaurants/la-palette-du-gout.jpg" alt="restaurant la palette du goût"></a>
+          <div class="restaurant-details-flexbox">
+            <div class="restaurant-descr">
+              <h3 class="restaurant-name-welcome-page">La palette du goût</h3>
+              <p>Ménilmontant</p>
+            </div>
+            <div class="div-heart-logo">
+              <a href="#"><i class="fa-regular fa-heart fa-1x heart-logo"></i></a>
+              <a href="#"><i class="fa-solid fa-heart fa-1x heart-logo-colored"></i></a>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="restaurant">
-        <a href="a-la-francaise-menu.html"><img src="images\restaurants\a-la-francaise.jpg" alt="restaurant A la française"></a>
-        <div class="restaurant-details-flexbox">
-          <div class="restaurant-descr">
-            <h3 class="restaurant-name-welcome-page">A la française</h3>
-            <p>Cité Rouge</p>
-          </div>
-          <div class="div-heart-logo">
-            <a href="#"><i class="fa-regular fa-heart fa-2x heart-logo"></i></a>
-            <a href="#"><i class="fa-solid fa-heart fa-2x heart-logo-colored"></i></a>
+        <div class="restaurant">
+          <p class="new">Nouveau</p>
+          <a href="la-note-echantee-menu.html"><img src="images\restaurants\la-note-enchantee.jpg" alt="restaurant La note enchantée"></a>
+          <div class="restaurant-details-flexbox">
+            <div class="restaurant-descr">
+              <h3 class="restaurant-name-welcome-page">La note enchantée</h3>
+              <p>Charonne</p>
+            </div>
+            <div class="div-heart-logo">
+              <a href="#"><i class="fa-regular fa-heart fa-1x heart-logo"></i></a>
+              <a href="#"><i class="fa-solid fa-heart fa-1x heart-logo-colored"></i></a>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="restaurant">
-        <a href="le-delice-des-sens-menu.html"><img src="images\restaurants\le-delice-des-sens.jpg" alt="restaurant Le délice des sens"></a>
-        <div class="restaurant-details-flexbox">
-          <div class="restaurant-descr">
-          <h3 class="restaurant-name-welcome-page">Le délice des sens</h3>
-          <p>Folie-Méricourt</p>
+        <div class="restaurant">
+          <a href="a-la-francaise-menu.html"><img src="images\restaurants\a-la-francaise.jpg" alt="restaurant A la française"></a>
+          <div class="restaurant-details-flexbox">
+            <div class="restaurant-descr">
+              <h3 class="restaurant-name-welcome-page">A la française</h3>
+              <p>Cité Rouge</p>
+            </div>
+            <div class="div-heart-logo">
+              <a href="#"><i class="fa-regular fa-heart fa-1x heart-logo"></i></a>
+              <a href="#"><i class="fa-solid fa-heart fa-1x heart-logo-colored"></i></a>
+            </div>
           </div>
-          <div class="div-heart-logo">
-            <a href="#"><i class="fa-regular fa-heart fa-2x heart-logo"></i></a>
-            <a href="#"><i class="fa-solid fa-heart fa-2x heart-logo-colored"></i></a>
+        </div>
+
+        <div class="restaurant">
+          <a href="le-delice-des-sens-menu.html"><img src="images\restaurants\le-delice-des-sens.jpg" alt="restaurant Le délice des sens"></a>
+          <div class="restaurant-details-flexbox">
+            <div class="restaurant-descr">
+            <h3 class="restaurant-name-welcome-page">Le délice des sens</h3>
+            <p>Folie-Méricourt</p>
+            </div>
+            <div class="div-heart-logo">
+              <a href="#"><i class="fa-regular fa-heart fa-1x heart-logo"></i></a>
+              <a href="#"><i class="fa-solid fa-heart fa-1x heart-logo-colored"></i></a>
+            </div>
           </div>
         </div>
       </div>
